# alloc_zeroed_rs

./: .gitignore  Cargo.toml  README.md
core/: Cargo.toml
core/examples/: alloc_zeroed.rs
core/src/core/: mod.rs
core/src/std/: error.rs
core/tests/: miri.rs  ui.rs
examples/: alloc_zeroed_boxed.rs  it_works.rs
macros/: Cargo.toml
macros/src/: lib.rs
scripts/: coverage.sh
src/: error.rs  implementations.rs  lib.rs  tests.rs
src/core/: error.rs  implementations.rs  mod.rs
src/std/: mod.rs
tests/: miri.rs
tests/ui/: derive_errors.rs  derive_errors.stderr
